# solana-memecoin-twitter-signals-bot

./: .env.example  .gitignore  Anchor.toml  LICENSE  README.md  SECURITY.md  package.json
docs/: SETUP.md
programs/trading-bot/: Cargo.toml
programs/trading-bot/src/: lib.rs
src/: index.js
src/analysis/: riskAnalyzer.js
src/monitor/: poolMonitor.js
src/trading/: tradingEngine.js
src/twitter/: twitterBot.js
src/utils/: configManager.js  logger.js
