[package]
name = "trading-bot"
version = "0.1.0"
description = "Solana smart contract for automated memecoin trading"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trading_bot"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
anchor-debug = [
    "anchor-lang/anchor-debug",
    "anchor-spl/anchor-debug"
]

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.3", features = ["no-entrypoint"] }
solana-program = "1.16.0"

[dev-dependencies]
solana-program-test = "1.16.0"
solana-sdk = "1.16.0"
tokio = { version = "1.0", features = ["full"] }